# ai-generate-pptx

./: .env.example  .gitignore  README.md  app.py  index.ts  llm.py  main.py  package-lock.json  package.json  pptx-generator.js  pptx-generator.ts  prompt.py  pyproject.toml  setup.ps1  setup.sh  structure.json
static/js/: client_pptx.js
